[gd_scene load_steps=3 format=2]

[ext_resource path="res://Filed.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Field" type="Node2D"]

modulate = Color( 0.126899, 0.0802307, 0.933594, 1 )
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="FieldArea" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision", "Transform" ]

[node name="FieldAreaCollision" type="CollisionShape2D" parent="FieldArea" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="FieldPolygon" type="Polygon2D" parent="." index="1"]

polygon = PoolVector2Array(  )
uv = PoolVector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = PoolColorArray( 0, 0, 0, 1 )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="FieldArea" to="." method="_on_FieldArea_area_entered"]

[connection signal="area_exited" from="FieldArea" to="." method="_on_FieldArea_area_exited"]


